# gopigo3

./: .gitignore  LICENSE  README.md
gopigo3/: CMakeLists.txt  package.xml
gopigo3_bringup/bringup_car/: CMakeLists.txt  package.xml
gopigo3_bringup/bringup_car/launch/: differential_drives.launch  distance_sensor.launch  starter_kit.launch
gopigo3_bringup/bringup_car/src/: gopigo3_driver.py
gopigo3_bringup/gopigo3_bringup/: CMakeLists.txt  package.xml
gopigo3_bringup/gopigo3_bringup/launch/includes/: description.launch.xml
gopigo3_description/: CMakeLists.txt  package.xml
gopigo3_description/launch/: gopigo3_rviz.launch
gopigo3_description/meshes/: GoPiGo3_Body.mlp  GoPiGo3_Wheel.mlp
gopigo3_description/rviz/: model_conf.rviz
gopigo3_description/urdf/: common_properties.xacro  gopigo3.gazebo.xacro  gopigo3.urdf.xacro
gopigo3_fake/: CMakeLists.txt  package.xml
gopigo3_fake/include/gopigo3_fake/: gopigo3_fake.h
gopigo3_fake/launch/: gopigo3_fake.launch
gopigo3_fake/rviz/: gopigo3_fake.rviz
gopigo3_fake/src/: gopigo3_fake.cpp
