<?xml version="1.0"?>
<package format="2">
  <name>bringup_car</name>
  <version>1.0.0</version>
  <description>
    ROS package for GoPiGo3 Starter Kit
  </description>
  <license>Apache 2.0</license>
  <author email="brjapon@therobotacademy.com">Bernardo Ronquillo Japon</author>
  <maintainer email="brjapon@therobotacademy.com">Bernardo Ronquillo Japon</maintainer>
  <url type="website">http://wiki.ros.org/gopigo3</url>
  <url type="repository">https://github.com/ros-gopigo3/gopigo3</url>
  <url type="bugtracker">https://github.com/ros-gopigo3/gopigo3/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
